[tool.poetry]
name = "knoxbase"
version = "0.1.0"
description = ""
authors = ["SkMishra <sanatkumarmishra02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-rest-knox = "^4.2.0"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
